--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node ace serve --watch",
+    "build": "node ace build --production"
   },
   "keywords": [],
   "author": "",
