Mensagem descritiva das alterações feitas

--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node server.js",
-      "install-prod": "npm install --omit=dev"
+        "start": "cross-env NODE_ENV=development node server.js"
+        
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^9.0.2",
-      "mongoose": "^7.5.1"
+        "bcryptjs": "^2.4.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.5.1"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3"
     }
-  }
+}
