--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env NODE_ENV=development node server.js"
-        
+        "start": "node server.js"
     },
     "keywords": [],
     "author": "",
@@ -15,8 +14,5 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.1"
-    },
-    "devDependencies": {
-        "cross-env": "^7.0.3"
     }
 }
