--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node server.js",
-        "install-prod": "npm install --omit=dev"
+        "start": "node server.js"
+        
     },
     "keywords": [],
     "author": "",
